--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -422,7 +422,7 @@ body {
     margin: 15px 0px 15px 0px;
 }
 
-.feed_each div div {
+.feed_each_div {
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -492,12 +492,12 @@ body {
 }
 
 .rating-head, .rating {
-    display: inline-block;
+    // display: inline-block;
 }
 
 .rating-head {
-    width: 30%;
-    text-align: center;
+    width: 100%;
+    // text-align: center;
 }
 
 .feed_hr {
