--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -1,54 +1,124 @@
 <!-- 10개짤라서 -->
+<head>
+  <style>
+    /*.st6 {*/
+    /*  color-fill: #e9b25b;*/
+    /*}*/
+  </style>
+</head>
 
 <!--강의 검색결과 -->
 <div class="index_container">
-  <div class="container">
+  <div class="container-fluid">
     <div>
 
         <p class="feed_head">최신 강의평</p>
+        <!--<object type="image/svg+xml" data="/assets/lion_1.svg" id="lion"></object>-->
 
         <% @evaluations.each do |e| %>
             <div class="feed_each">
               <div class="row">
-                <div class="col-lg-2 col-md-2 col-sm-3 col-xs-3 feed_writer">
+                <div class="col-xs-3 col-sm-2 feed_writer feed_each_div">
                   <%= image_tag "/assets/lion_1.svg", class: "feed_lion", alt: "lion"%>
                   <p class="feed_nickname"><%= e.user.nickname %></p>
                 </div>
 
-                <div class="col-lg-7 col-md-8 col-sm-9 col-xs-9">
-                  <p class="feed_course"><a href='/courses/show/<%= e.course.id %>'><%= e.course.lecture.name %></a></p>
+                <div class="col-xs-9 col-sm-7 feed_each_div">
+                  <p class="feed_course"><a href='/courses/show/<%= e.course.id %>'><%= e.course.lecture.name %></a></p><br>
                   <% if e.course.is_major == true %>
                     <p class="feed_prof_major"><span class="lec_cate lec_major">전공</span><%= e.course.professor.name %> 교수님</p>
                   <% else %>
                     <p class="feed_prof_kyo"><span class="lec_cate lec_kyo">교양</span><%= e.course.professor.name %> 교수님</p>
                   <% end %>
-                  <div class="col-sm-12 col-xs-12 visible-sm-block visible-xs-block" style="border:1px solid black;">
-                    <div class="rating-head">총점</div>
-                    <div class="rating">
-                      <select id="pillbar" name="rating" autocomplete="off">
-                        <option value="A"></option>
-                        <option value="B"></option>
-                        <option value="C"></option>
-                        <option value="D"></option>
-                        <option value="E"></option>
-                      </select>
+                  <div class="row">
+                    <div class="m_indi col-xs-12 visible-xs-block">
+                      
+                      <div class="rating_div">
+                        <div class="rating-head">총점</div>
+                        <div class="rating">
+                          <% if e.point_overall == 1 %><% p = "p1" %>
+                              <% elsif e.point_overall == 2 %><% p = "p2" %>
+                              <% elsif e.point_overall == 3 %><% p = "p3" %>
+                              <% elsif e.point_overall == 4 %><% p = "p4" %>
+                              <% elsif e.point_overall == 5 %><% p = "p5" %>
+                          <% end %>
+                          <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
+                            <option value="1"></option>
+                            <option value="2"></option>
+                            <option value="3"></option>
+                            <option value="4"></option>
+                            <option value="5"></option>
+                          </select>
+                        </div>
+                      </div>
+                      
+                      <div class="rating_div">
+                        <div class="rating-head">널널함</div>
+                        <div class="rating">
+                          <% if e.point_easiness == 1 %><% p = "p1" %>
+                          <% elsif e.point_easiness == 2 %><% p = "p2" %>
+                          <% elsif e.point_easiness == 3 %><% p = "p3" %>
+                          <% elsif e.point_easiness == 4 %><% p = "p4" %>
+                          <% elsif e.point_easiness == 5 %><% p = "p5" %>
+                          <% end %>
+                          <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
+                            <option value="1"></option>
+                            <option value="2"></option>
+                            <option value="3"></option>
+                            <option value="4"></option>
+                            <option value="5"></option>
+                          </select>
+                        </div>
+                      </div>
+    
+                      <div class="rating_div">
+                        <div class="rating-head">강의만족도</div>
+                        <div class="rating">
+                          <% if e.point_gpa_satisfaction == 1 %><% p = "p1" %>
+                          <% elsif e.point_gpa_satisfaction == 2 %><% p = "p2" %>
+                          <% elsif e.point_gpa_satisfaction == 3 %><% p = "p3" %>
+                          <% elsif e.point_gpa_satisfaction == 4 %><% p = "p4" %>
+                          <% elsif e.point_gpa_satisfaction == 5 %><% p = "p5" %>
+                          <% end %>
+                          <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
+                            <option value="1"></option>
+                            <option value="2"></option>
+                            <option value="3"></option>
+                            <option value="4"></option>
+                            <option value="5"></option>
+                          </select>
+                        </div>
+                      </div>
+    
+                      <div class="rating_div">
+                        <div class="rating-head">학점만족도</div>
+                        <div class="rating">
+                          <% if e.point_clarity == 1 %><% p = "p1" %>
+                          <% elsif e.point_clarity == 2 %><% p = "p2" %>
+                          <% elsif e.point_clarity == 3 %><% p = "p3" %>
+                          <% elsif e.point_clarity == 4 %><% p = "p4" %>
+                          <% elsif e.point_clarity == 5 %><% p = "p5" %>
+                          <% end %>
+                          <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
+                            <option value="1"></option>
+                            <option value="2"></option>
+                            <option value="3"></option>
+                            <option value="4"></option>
+                            <option value="5"></option>
+                          </select>
+                        </div>
+                      </div>
+                      
                     </div>
-                    널널함<br>
-                    강의만족도 학점만족도<br>
                   </div>
-
+                  
                   <p class="feed_content">
                     <%= e.body.html_safe %></p>
                   <p class="feed_etc">
-                    <% if (time_ago_in_words(e.created_at)) == "1분 이하" %>
-                      1분
-                    <% else %>
-                      <%= time_ago_in_words(e.created_at) %>
-                    <% end %>
-                    전 · <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
+                    5시간 전 · <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
                   </p>
                 </div>
-                <div class="col-lg-3 col-md-2 visible-lg-block visible-md-block">
+                <div class="hidden-xs col-sm-3">
                   <div class="rating_div">
                     <div class="rating-head">총점</div>
                     <div class="rating">
@@ -59,11 +129,11 @@
                           <% elsif e.point_overall == 5 %><% p = "p5" %>
                       <% end %>
                       <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                        <option value="A"></option>
-                        <option value="B"></option>
-                        <option value="C"></option>
-                        <option value="D"></option>
-                        <option value="E"></option>
+                        <option value="1"></option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                        <option value="5"></option>
                       </select>
                     </div>
                   </div>
@@ -78,11 +148,11 @@
                       <% elsif e.point_easiness == 5 %><% p = "p5" %>
                       <% end %>
                       <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                        <option value="A"></option>
-                        <option value="B"></option>
-                        <option value="C"></option>
-                        <option value="D"></option>
-                        <option value="E"></option>
+                        <option value="1"></option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                        <option value="5"></option>
                       </select>
                     </div>
                   </div>
@@ -97,11 +167,11 @@
                       <% elsif e.point_gpa_satisfaction == 5 %><% p = "p5" %>
                       <% end %>
                       <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                        <option value="A"></option>
-                        <option value="B"></option>
-                        <option value="C"></option>
-                        <option value="D"></option>
-                        <option value="E"></option>
+                        <option value="1"></option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                        <option value="5"></option>
                       </select>
                     </div>
                   </div>
@@ -116,11 +186,11 @@
                       <% elsif e.point_clarity == 5 %><% p = "p5" %>
                       <% end %>
                       <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                        <option value="A"></option>
-                        <option value="B"></option>
-                        <option value="C"></option>
-                        <option value="D"></option>
-                        <option value="E"></option>
+                        <option value="1"></option>
+                        <option value="2"></option>
+                        <option value="3"></option>
+                        <option value="4"></option>
+                        <option value="5"></option>
                       </select>
                     </div>
                   </div>
@@ -135,9 +205,28 @@
 </div>
 
 <script>
+
+  //xs가 아닐 경우, pill-bar 100% 꽉 차도록 padding 조절
+  $(document).ready(function(){
+      if (window.innerWidth >= 768){
+        var targetBar = $('.br-theme-bars-pill .br-widget a');
+        
+        var targetWidth = $('.rating-head').outerWidth()/5;
+        targetBar.css('padding', '0 ' + targetWidth +'px')
+       }
+  });
+  
+  // $(window).resize(function(){     
+
+  //     if ($('header').width() >= 768 ){
+
+  //             // is mobile device
+  //     }
+  // });
+  
   $('.p1').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'A',
+    initialRating: '1',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -150,7 +239,7 @@
 
   $('.p2').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'B',
+    initialRating: '2',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -163,7 +252,7 @@
 
   $('.p3').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'C',
+    initialRating: '3',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -176,7 +265,7 @@
 
   $('.p4').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'D',
+    initialRating: '4',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -189,7 +278,7 @@
 
   $('.p5').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'E',
+    initialRating: '',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -199,4 +288,18 @@
     // alert('Selected rating: ' + value);
     // }
   });
+  
+  // $(window).load(function(){
+  //   alert($('.st6').innerHTML);
+  // });
+
+  
+//   function prepare(){
+//   var S=document.getElementById("sv")
+//   var SD=S.getSVGDocument();
+//   E=SD.getElementById('E');
+//     }
+// function change(v){
+//   E.setAttribute("fill", v);
+// }
 </script>
