--- a/app/views/evaluations/index.erb
+++ b/app/views/evaluations/index.erb
@@ -41,11 +41,14 @@
                   <%= e.body.html_safe %></p>
                 <p class="feed_etc">
                   <% if (time_ago_in_words(e.created_at)) == "1분 이하" %>
-                      1분
+                      "방금 전"
+                  <% elsif (time_ago_in_words(e.created_at)).last == '일' and (time_ago_in_words(e.created_at)).chomp('일').to_i > 7 %>
+                      <%= time_tag(e.created_at, :format=>'%Y년 %m월 %d일') %>
                   <% else %>
-                      <%= time_ago_in_words(e.created_at) %>
+                      <%= time_ago_in_words(e.created_at) + " 전" %>
                   <% end %>
-                  전 · <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
+                  ·
+                  <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
                 </p>
               </div>
               <div class="col-lg-3 col-md-2 visible-lg-block visible-md-block">
