--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -115,7 +115,15 @@
                   <p class="feed_content">
                     <%= e.body.html_safe %></p>
                   <p class="feed_etc">
-                    5시간 전 · <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
+                    <% if (time_ago_in_words(e.created_at)) == "1분 이하" %>
+                        "방금 전"
+                    <% elsif (time_ago_in_words(e.created_at)).last == '일' and (time_ago_in_words(e.created_at)).chomp('일').to_i > 7 %>
+                        <%= time_tag(e.created_at, :format=>'%Y년 %m월 %d일') %>
+                    <% else %>
+                        <%= time_ago_in_words(e.created_at) + " 전" %>
+                    <% end %>
+                    ·
+                    <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
                   </p>
                 </div>
                 <div class="hidden-xs col-sm-3">
