--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -24,11 +24,11 @@
                           <div class="rating-head">총점</div>
                           <div class="rating">
                             <select id="pillbar" name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
+                              <option value="1"></option>
+                              <option value="2"></option>
+                              <option value="3"></option>
+                              <option value="4"></option>
+                              <option value="5"></option>
                             </select>
                           </div>
                           널널함<br>
@@ -39,7 +39,7 @@
                           <%= e.body.html_safe %></p>
                         <p class="feed_etc">
                           <% if (time_ago_in_words(e.created_at)) == "1분 이하" %>
-                              "방금 전"
+                              방금 전
                           <% elsif (time_ago_in_words(e.created_at)).last == '일' and (time_ago_in_words(e.created_at)).chomp('일').to_i > 7 %>
                               <%= time_tag(e.created_at, :format=>'%Y년 %m월 %d일') %>
                           <% else %>
@@ -78,11 +78,11 @@
                                 <% elsif e.point_overall == 5 %><% p = "p5" %>
                             <% end %>
                             <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
+                              <option value="1"></option>
+                              <option value="2"></option>
+                              <option value="3"></option>
+                              <option value="4"></option>
+                              <option value="5"></option>
                             </select>
                           </div>
                         </div>
@@ -97,11 +97,11 @@
                                 <% elsif e.point_easiness == 5 %><% p = "p5" %>
                             <% end %>
                             <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
+                              <option value="1"></option>
+                              <option value="2"></option>
+                              <option value="3"></option>
+                              <option value="4"></option>
+                              <option value="5"></option>
                             </select>
                           </div>
                         </div>
@@ -116,11 +116,11 @@
                                 <% elsif e.point_gpa_satisfaction == 5 %><% p = "p5" %>
                             <% end %>
                             <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
+                              <option value="1"></option>
+                              <option value="2"></option>
+                              <option value="3"></option>
+                              <option value="4"></option>
+                              <option value="5"></option>
                             </select>
                           </div>
                         </div>
@@ -135,11 +135,11 @@
                                 <% elsif e.point_clarity == 5 %><% p = "p5" %>
                             <% end %>
                             <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                              <option value="A"></option>
-                              <option value="B"></option>
-                              <option value="C"></option>
-                              <option value="D"></option>
-                              <option value="E"></option>
+                              <option value="1"></option>
+                              <option value="2"></option>
+                              <option value="3"></option>
+                              <option value="4"></option>
+                              <option value="5"></option>
                             </select>
                           </div>
                         </div>
@@ -159,7 +159,7 @@
 <script>
   $('.p1').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'A',
+    initialRating: '1',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -172,7 +172,7 @@
 
   $('.p2').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'B',
+    initialRating: '2',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -185,7 +185,7 @@
 
   $('.p3').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'C',
+    initialRating: '3',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -198,7 +198,7 @@
 
   $('.p4').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'D',
+    initialRating: '4',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -211,7 +211,7 @@
 
   $('.p5').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'E',
+    initialRating: '5',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
