--- a/app/views/evaluations/index.erb
+++ b/app/views/evaluations/index.erb
@@ -26,11 +26,11 @@
                   <div class="rating-head">총점</div>
                   <div class="rating">
                     <select id="pillbar" name="rating" autocomplete="off">
-                      <option value="A"></option>
-                      <option value="B"></option>
-                      <option value="C"></option>
-                      <option value="D"></option>
-                      <option value="E"></option>
+                      <option value="1"></option>
+                      <option value="2"></option>
+                      <option value="3"></option>
+                      <option value="4"></option>
+                      <option value="5"></option>
                     </select>
                   </div>
                   널널함<br>
@@ -41,7 +41,7 @@
                   <%= e.body.html_safe %></p>
                 <p class="feed_etc">
                   <% if (time_ago_in_words(e.created_at)) == "1분 이하" %>
-                      "방금 전"
+                      방금 전
                   <% elsif (time_ago_in_words(e.created_at)).last == '일' and (time_ago_in_words(e.created_at)).chomp('일').to_i > 7 %>
                       <%= time_tag(e.created_at, :format=>'%Y년 %m월 %d일') %>
                   <% else %>
@@ -62,11 +62,11 @@
                         <% elsif e.point_overall == 5 %><% p = "p5" %>
                     <% end %>
                     <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                      <option value="A"></option>
-                      <option value="B"></option>
-                      <option value="C"></option>
-                      <option value="D"></option>
-                      <option value="E"></option>
+                      <option value="1"></option>
+                      <option value="2"></option>
+                      <option value="3"></option>
+                      <option value="4"></option>
+                      <option value="5"></option>
                     </select>
                   </div>
                 </div>
@@ -81,11 +81,11 @@
                         <% elsif e.point_easiness == 5 %><% p = "p5" %>
                     <% end %>
                     <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                      <option value="A"></option>
-                      <option value="B"></option>
-                      <option value="C"></option>
-                      <option value="D"></option>
-                      <option value="E"></option>
+                      <option value="1"></option>
+                      <option value="2"></option>
+                      <option value="3"></option>
+                      <option value="4"></option>
+                      <option value="5"></option>
                     </select>
                   </div>
                 </div>
@@ -100,11 +100,11 @@
                         <% elsif e.point_gpa_satisfaction == 5 %><% p = "p5" %>
                     <% end %>
                     <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                      <option value="A"></option>
-                      <option value="B"></option>
-                      <option value="C"></option>
-                      <option value="D"></option>
-                      <option value="E"></option>
+                      <option value="1"></option>
+                      <option value="2"></option>
+                      <option value="3"></option>
+                      <option value="4"></option>
+                      <option value="5"></option>
                     </select>
                   </div>
                 </div>
@@ -119,11 +119,11 @@
                         <% elsif e.point_clarity == 5 %><% p = "p5" %>
                     <% end %>
                     <select id="pillbar" class=<%= p %> name="rating" autocomplete="off">
-                      <option value="A"></option>
-                      <option value="B"></option>
-                      <option value="C"></option>
-                      <option value="D"></option>
-                      <option value="E"></option>
+                      <option value="1"></option>
+                      <option value="2"></option>
+                      <option value="3"></option>
+                      <option value="4"></option>
+                      <option value="5"></option>
                     </select>
                   </div>
                 </div>
@@ -140,7 +140,7 @@
 <script>
   $('.p1').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'A',
+    initialRating: '1',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -153,7 +153,7 @@
 
   $('.p2').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'B',
+    initialRating: '2',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -166,7 +166,7 @@
 
   $('.p3').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'C',
+    initialRating: '3',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -179,7 +179,7 @@
 
   $('.p4').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'D',
+    initialRating: '4',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
@@ -192,7 +192,7 @@
 
   $('.p5').barrating('show', {
     theme: 'bars-pill',
-    initialRating: 'E',
+    initialRating: '5',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
