--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,29 +1,34 @@
-<br><br><br>
-<h1>강평작성</h1> 
+<br><br><br><br>
 <%= form_for @evaluation do |f| %>
-  <%= f.hidden_field :user_id, value: current_user.id %>  
-  <%= f.number_field :course_id, autocomplete: "on", placeholder: "수업아이디"%> <hr>
+  <%= f.hidden_field :user_id, value: current_user.id %>
+  <%= f.text_field :course_id, id: "tags", placeholder: "강의명", data: {autocomplete_source: Course.all.map { |t| { :label => t.lecture.name + "(" + t.professor.name + ")", :value => t.id }}} %> <hr>
+  <%= f.hidden_field :course_id, id: "course_id" %>
   총점<br> <%= f.select :point_overall, options_for_select([1,2,3,4,5]), {}, class: "p" %> <hr>
   널널함<br> <%= f.select :point_easiness, options_for_select([1,2,3,4,5]), {}, class: "p" %> <hr>
   강의만족도<br> <%= f.select :point_gpa_satisfaction, options_for_select([1,2,3,4,5]), {}, class: "p" %> <hr>
   학점만족도<br> <%= f.select :point_clarity, options_for_select([1,2,3,4,5]), {}, class: "p" %> <hr>
   <%= f.text_field :body, autofocus: true, placeholder: "한줄평"%> <hr>
-  <%= f.submit "작성하기" %> 
+  <%= f.submit "작성하기" %>
 <% end %>
 
-
-
 <script>
-$('.p').barrating('show', {
-  theme: 'bars-pill',
-  initialRating: '3',
-  showValues: false,
-  showSelectedRating: false,
-  allowEmpty: false,
-  readonly: false
-  // emptyValue: '-- no rating selected --'
-  // onSelect: function(value, text) {
-  // alert('Selected rating: ' + value);
-  // }
+  $( function() {
+    $( "#tags" ).autocomplete({
+      source: $('#tags').data('autocomplete-source'),
+      select: function(event, ui) {
+        event.preventDefault();
+        $(this).val(ui.item.label);
+        $('#course_id').val(ui.item.value);
+      }
+    });
+  });
+
+  $('.p').barrating('show', {
+    theme: 'bars-pill',
+    initialRating: '3',
+    showValues: false,
+    showSelectedRating: false,
+    allowEmpty: false,
+    readonly: false
   });
 </script>
