--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -20,18 +20,26 @@
 <br>
 같은강의
 <br>
-<% @identical_courses.each do |id| %>
+<% if !@identical_courses.present? %>
+    같은강의가 없습니다.
+<% else %>
+  <% @identical_courses.each do |id| %>
     <% @other_course = Course.find(id) %>
     <a href=/courses/show/<%= id %>> <%= @other_course.lecture.name %> (<%= @other_course.professor.name %>)</a>
-<% end%>
+  <% end %>
+<% end %>
+
 <br>
 연관강의
 <br>
-<% @related_courses.each do |id| %>
-  <% @other_course = Course.find(id) %>
-  <a href=/courses/show/<%= id %>> <%= @other_course.lecture.name %> (<%= @other_course.professor.name %>)</a>
-<% end%>
-
+<% if !@related_courses.present? %>
+    연관강의가 없습니다.
+<% else %>
+  <% @related_courses.each do |id| %>
+    <% @other_course = Course.find(id) %>
+    <a href=/courses/show/<%= id %>> <%= @other_course.lecture.name %> (<%= @other_course.professor.name %>)</a>
+  <% end %>
+<% end %>
 <hr>
 
 <ul class="w3-navbar w3-black">
