--- a/app/views/evaluations/main.html.erb
+++ b/app/views/evaluations/main.html.erb
@@ -39,7 +39,7 @@
                     <div class="rating_div">
                       <div class="rating-head">총점</div>
                       <div class="rating">
-                        <select id="pillbar" class=<%= "p#{e.point_overall} %> name="rating" autocomplete="off">
+                        <select id="pillbar" class=<%= "p#{e.point_overall}" %> name="rating" autocomplete="off">
                           <% 1.upto(5) do |i| %>
                           <option value="<%= i %>"></option>
                           <% end %>
@@ -50,7 +50,7 @@
                     <div class="rating_div">
                       <div class="rating-head">널널함</div>
                       <div class="rating">
-                        <select id="pillbar" class=<%= "p#{e.point_easiness} %> name="rating" autocomplete="off">
+                        <select id="pillbar" class=<%= "p#{e.point_easiness}" %> name="rating" autocomplete="off">
                           <% 1.upto(5) do |i| %>
                           <option value="<%= i %>"></option>
                           <% end %>
@@ -61,7 +61,7 @@
                     <div class="rating_div">
                       <div class="rating-head">강의만족도</div>
                       <div class="rating">
-                        <select id="pillbar" class=<%= "p#{e.point_gpa_satisfaction} %> name="rating" autocomplete="off">
+                        <select id="pillbar" class=<%= "p#{e.point_gpa_satisfaction}" %> name="rating" autocomplete="off">
                         <% 1.upto(5) do |i| %>
                         <option value="<%= i %>"></option>
                         <% end %>
