--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -7,7 +7,7 @@
 </ul>
 <div id="London" class="w3-container city">
   <p>버튼 대신 렌더하기로 바꿔야할듯</p>
-  <p><%= link_to "버튼", edit_user_path(current_user) %></p>
+  <p><%= link_to "버튼", edit_user_path(@current_user) %></p>
 </div>
 <div id="Paris" class="w3-container city" style="display:none">
   <table>
